--- a/lessons/pom.xml
+++ b/lessons/pom.xml
@@ -24,5 +24,11 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.pg4200</groupId>
+            <artifactId>pg4200-exercises</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
